# Final-project_training

./: .env .example  .replit  ER_Diagram.md  README.md  SETUP_INSTRUCTIONS.md  build_frontend.py  database_schema.sql  docker-compose.yml  email_config.py  idcr_documents.db  idcr_documents.db-journal  index.html  main.py  package-lock.json  package.json  pyproject.toml  todo.md
Final-project_training/: SETUP_COMPLETE.md  demo.html  index.html
attached_assets/: Document Classification System_implementation_1752315522831.docx  Pasted--Database-initialized-home-runner-workspace-main-py-1110-DeprecationWarning-on-event--1752319274254_1752319274256.txt  Pasted--Simple-Frontend-Prompt-Guide-JavaScript-No-Zod-SoC-Theming-Service-Layer-Overview-Thi-1752477509769_1752477509773.txt  Pasted-Based-on-the-codebase-analysis-here-s-a-comprehensive-overview-of-the-Intelligent-Document-Classifi-1752395291304_1752395291305.txt  Pasted-Database-initialized-INFO-Started-server-process-140-INFO-Waiting-for-application-star-1752330150767_1752330150770.txt  Pasted-Document-Classification-System-A-comprehensive-guide-for-building-an-intelligent-document-classific-1752315584970_1752315584971.txt  Pasted-INFO-172-31-128-56-37130-GET-api-stats-HTTP-1-1-500-Internal-Server-Error-ERROR-Excep-1752345939348_1752345939349.txt  Pasted-Product-Requirements-Document-PRD-Intelligent-Document-Classification-and-Routing-IDCR-System-1--1752568167708_1752568167710.txt  content-1752477669432.md  content-1752485023121.md
frontend/: TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+59 files in other folders)
